--- a/CSS/events.css
+++ b/CSS/events.css
@@ -1,6 +1,11 @@
+.wrapper {
+    padding-top: 15vh;
+    overflow: hidden;
+}
+
 .banner {
     background-image: url(../IMG/event3);
-    height: 60vh;
+    height: 50vh;
     width: 100%;
     background-size: cover;
     background-position: top;
@@ -77,6 +82,9 @@
 }
 
 @media only screen and (min-width: 900px) {
+    .wrapper {
+        padding-top: 10px;
+    }
     
     .info {
         width: 40%;
