--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,3 +1,6 @@
+.wrapper {
+    overflow: hidden;
+}
 
 #profile-hero {
     padding-top: 20px;
@@ -823,16 +826,16 @@
     .gallery {
 
         grid-template-columns: repeat(4, minmax(10px, 1fr));
-        grid-template-rows: repeat(5, 130px);
+        grid-template-rows: repeat(5, 120px);
     }
 
     #zipporah-gallery  {
-        grid-template-rows: repeat(4, 130px);
+        grid-template-rows: repeat(4, 120px);
     }
 
     .img {
-        height: 130px;
-        width: 130px;
+        height: 120px;
+        width: 120px;
     }
 }
 @media only screen and (min-width: 900px) {
@@ -847,8 +850,12 @@
     }
 
     .gallery {
-
+        grid-template-rows: repeat(5, 130px);
         margin-bottom: 50px;
+    }
+    .img {
+        height: 130px;
+        width: 130px;
     }
 
     .img-window img {
